Pagina di dettaglio

--- a/S6-L1/Views/Studente/Index.cshtml
+++ b/S6-L1/Views/Studente/Index.cshtml
@@ -1,24 +1,25 @@
 ﻿@model List<StudentApp.StudenteViewModel>
 
-    @{
-    ViewData["Title"] = "Home Page";
-    }
+ @{
+ ViewData["Title"] = "Home Page";
+ }
 
-    <h2>Lista Studenti</h2>
-    <button id="aggiornaStudenti">Aggiorna Lista</button>
-    <div id="listaStudenti">
-        @await Html.PartialAsync("_ListaStudenti", Model)
-    </div>
+<h2>Lista Studenti</h2>
+<button id="aggiornaStudenti">Aggiorna Lista</button>
+<div id="listaStudenti">
+    @await Html.PartialAsync("_ListaStudenti", Model)
+</div>
 
-    <script>
+<script>
     $(document).ready(function () {
-            $("#aggiornaStudenti").click(function () {
-                $.ajax({
-                    url: '/Studente/ListaStudenti',
-                    type: 'GET',
-                    success: function (data) {
-                        $("#listaStudenti").html(data);
-                    }
-                });
+        $("#aggiornaStudenti").click(function () {
+            $.ajax({
+                url: '/Studente/ListaStudenti',
+                type: 'GET',
+                success: function (data) {
+                    $("#listaStudenti").html(data);
+                }
             });
-        });</script>
+        });
+    });
+</script>
